compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__warnings__variables_redundant_comparison.snap
---
source: compiler-core/src_refactored/__core/type_/tests/warnings.rs
assertion_line: 4259
expression: "pub fn main(a) { a == a }"
snapshot_kind: text
---
----- SOURCE CODE
pub fn main(a) { a == a }

----- WARNING
warning: Redundant comparison
  ┌─ /src/warning/wrn.gleam:1:18
  │
1 │ pub fn main(a) { a == a }
  │                  ^^^^^^ This is always `True`

This comparison is redundant since it always succeeds.
