compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__warnings__warning_many_at_same_time.snap
---
source: compiler-core/src_refactored/__core/type_/tests/warnings.rs
assertion_line: 66
expression: "\nfn main() { let five = 5 }"
snapshot_kind: text
---
----- SOURCE CODE

fn main() { let five = 5 }

----- WARNING
warning: Unused private function
  ┌─ /src/warning/wrn.gleam:2:1
  │
2 │ fn main() { let five = 5 }
  │ ^^^^^^^^^ This private function is never used

Hint: You can safely remove it.

warning: Unused variable
  ┌─ /src/warning/wrn.gleam:2:17
  │
2 │ fn main() { let five = 5 }
  │                 ^^^^ This variable is never used

Hint: You can ignore it with an underscore: `_five`.
