compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__warnings__warning_private_function_never_used.snap
---
source: compiler-core/src_refactored/__core/type_/tests/warnings.rs
assertion_line: 61
expression: "fn main() { 5 }"
snapshot_kind: text
---
----- SOURCE CODE
fn main() { 5 }

----- WARNING
warning: Unused private function
  ┌─ /src/warning/wrn.gleam:1:1
  │
1 │ fn main() { 5 }
  │ ^^^^^^^^^ This private function is never used

Hint: You can safely remove it.
