compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__warnings__warning_variable_never_used_test.snap
---
source: compiler-core/src_refactored/__core/type_/tests/warnings.rs
assertion_line: 52
expression: "\npub fn wibble() { Ok(5) }\npub fn main() { let five = wibble() }"
snapshot_kind: text
---
----- SOURCE CODE

pub fn wibble() { Ok(5) }
pub fn main() { let five = wibble() }

----- WARNING
warning: Unused variable
  ┌─ /src/warning/wrn.gleam:3:21
  │
3 │ pub fn main() { let five = wibble() }
  │                     ^^^^ This variable is never used

Hint: You can ignore it with an underscore: `_five`.
